--- a/View/adoanhnghiep/css/style.css
+++ b/View/adoanhnghiep/css/style.css
@@ -4,7 +4,13 @@
     border: 4px solid #fff;
     border-radius: 100%;
     object-fit: cover;
-   margin-left: 10px;
+    margin-left: 10px;
+}
+.product-item .card-parent{
+    width: 18rem;
+}
+.img-size{
+    height: 500px;
 }
 .col-item{
     height: 266px;
@@ -44,13 +50,26 @@
     margin-top: -0.21425em;
     line-height: 1.2857em;
 }
-
+.img-logo{
+    position: relative;
+     left: calc(50% -160px);
+  
+    transform: translateX(-50%);
+}
+.img-logo_mobile{
+    display: none;
+    color: #3e6500;
+    font-weight: 700;
+    font-size: 32px;
+}
 .nav-item{
     color: #000;
     font-size: 24px;
 }
 .navbar-list{
-   margin-left: 230px; 
+   position: relative;
+   left: 50%;
+   transform: translateX(-50%);
 }
 .container-introduce{
     margin-top: 48px;
@@ -69,13 +88,14 @@
     background-color: #EFEFEF;
     margin-top: 20px;
     padding: 100px 96px 0 0;
-    height: 1000px;
+    min-height: 1000px;
 }
 .content-text{
     color: #ff6600;
 }
 .grid-item{
     display: flex;
+    flex-direction:row;
 }
 .card-parent{
     position: relative;
@@ -156,6 +176,12 @@
 }
 .list-image__item{
     margin: 38px 0px 48px 0px;
+}
+.container-posts{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 75px;
 }
 .posts {
     color: #000;
