--- a/View/adoanhnghiep/trangchu.html
+++ b/View/adoanhnghiep/trangchu.html
@@ -8,7 +8,7 @@
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/reponsive.css">
+  <link rel="stylesheet" href="./css/blog.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
@@ -512,7 +512,7 @@
     <!-- Section: Social media -->
   
     <!-- Section: Links  -->
-    <section class="" style="background-color:#3e6500;color: #fff">
+    <section class="" style="background-color:#82ae46;color: #fff">
       <div class="container text-center text-md-start mt-5">
         <!-- Grid row -->
         <div class="row mt-3" >
