upload single  blog va list blog

--- a/View/adoanhnghiep/blog.html
+++ b/View/adoanhnghiep/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Chi tiết Blog</title>
+    <title>Danh sách các bài blog</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/blog.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
     <!-- Theme style -->
@@ -49,52 +49,137 @@
             </nav>
           </div>
     </div>
-   
-   
-    <!-- END nav -->
+
 
     <div class="hero-wrap hero-bread" style="background-image: url('/images/bg_1.jpg');">
-      <div class="container">
-        <div class="row no-gutters slider-text align-items-center justify-content-center">
-          <div class="col-md-9 ftco-animate text-center">
-          	<p class="breadcrumbs"><span class="mr-2"><a href="trangchu.html" style="color: #fff;font-size:18px">Home</a></span> <span style="color: #fff;font-size:18px">Blog</span></p>
-            <h1 class="mb-0 bread" >Blog</h1>
+        <div class="container">
+          <div class="row no-gutters slider-text align-items-center justify-content-center">
+            <div class="col-md-9 ftco-animate text-center">
+                <p class="breadcrumbs"><span class="mr-2"><a href="trangchu.html" style="color: #fff;font-size:18px">Home</a></span> <span style="color: #fff;font-size:18px">Blog</span></p>
+              <h1 class="mb-0 bread" >Blog</h1>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <section id="content-blog" class="ftco-section ftco-degree-bg">
+    <section class="ftco-section ftco-degree-bg">
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
-						<h2 class="mb-3">Organic foods is good for your health</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
-            <p>
-              <img class="img-content" src="/images/image_1.jpg" alt="pic1" class="img-fluid">
-            </p>
-            <p>Molestiae cupiditate inventore animi, maxime sapiente optio, illo est nemo veritatis repellat sunt doloribus nesciunt! Minima laborum magni reiciendis qui voluptate quisquam voluptatem soluta illo eum ullam incidunt rem assumenda eveniet eaque sequi deleniti tenetur dolore amet fugit perspiciatis ipsa, odit. Nesciunt dolor minima esse vero ut ea, repudiandae suscipit!</p>
-            <h2 class="mb-3 mt-5">#2. Creative WordPress Themes</h2>
-            <p>Temporibus ad error suscipit exercitationem hic molestiae totam obcaecati rerum, eius aut, in. Exercitationem atque quidem tempora maiores ex architecto voluptatum aut officia doloremque. Error dolore voluptas, omnis molestias odio dignissimos culpa ex earum nisi consequatur quos odit quasi repellat qui officiis reiciendis incidunt hic non? Debitis commodi aut, adipisci.</p>
-            <p>
-              <img class="img-content" src="/images/image_2.jpg" alt="pic2" class="img-fluid">
-            </p>
-            <p>Quisquam esse aliquam fuga distinctio, quidem delectus veritatis reiciendis. Nihil explicabo quod, est eos ipsum. Unde aut non tenetur tempore, nisi culpa voluptate maiores officiis quis vel ab consectetur suscipit veritatis nulla quos quia aspernatur perferendis, libero sint. Error, velit, porro. Deserunt minus, quibusdam iste enim veniam, modi rem maiores.</p>
-            <p>Odit voluptatibus, eveniet vel nihil cum ullam dolores laborum, quo velit commodi rerum eum quidem pariatur! Quia fuga iste tenetur, ipsa vel nisi in dolorum consequatur, veritatis porro explicabo soluta commodi libero voluptatem similique id quidem? Blanditiis voluptates aperiam non magni. Reprehenderit nobis odit inventore, quia laboriosam harum excepturi ea.</p>
-            <p>Adipisci vero culpa, eius nobis soluta. Dolore, maxime ullam ipsam quidem, dolor distinctio similique asperiores voluptas enim, exercitationem ratione aut adipisci modi quod quibusdam iusto, voluptates beatae iure nemo itaque laborum. Consequuntur et pariatur totam fuga eligendi vero dolorum provident. Voluptatibus, veritatis. Beatae numquam nam ab voluptatibus culpa, tenetur recusandae!</p>
-            <p>Voluptas dolores dignissimos dolorum temporibus, autem aliquam ducimus at officia adipisci quasi nemo a perspiciatis provident magni laboriosam repudiandae iure iusto commodi debitis est blanditiis alias laborum sint dolore. Dolores, iure, reprehenderit. Error provident, pariatur cupiditate soluta doloremque aut ratione. Harum voluptates mollitia illo minus praesentium, rerum ipsa debitis, inventore?</p>
-            <div class="tag-widget post-tag-container mb-5 mt-5">
-              <div class="tagcloud">
-                <a href="#" class="tag-cloud-link">Life</a>
-                <a href="#" class="tag-cloud-link">Sport</a>
-                <a href="#" class="tag-cloud-link">Tech</a>
-                <a href="#" class="tag-cloud-link">Travel</a>
-              </div>
-            </div>
+				<div class="row">
+				    <div class="col-md-12 d-flex ftco-animate block-content">
+		                <div class="blog-entry align-self-stretch d-md-flex">
+		              <a href="chitietbaiblog.html" class="hero-wrap hero-bread block-20" style="background-image: url('/images/image_1.jpg');">
+		              </a>
+		              <div class="text d-block pl-md-4">
+		              	<div class="meta mb-3 d-flex">
+		                  <div><a href="#">July 20, 2019</a></div>
+		                  <div><a href="#">Admin</a></div>
+		                  <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
+		                </div>
+		                <h3 class="heading "><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+		                <p class="heading-content">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+		                <p class="btn-parent"><a href="chitietbaiblog.html" class="btn btn-primary py-2 px-3">Read more</a></p>
+		              </div>
+		            </div>
+		          </div>
+		          <div class="col-md-12 d-flex ftco-animate block-content">
+		            <div class="blog-entry align-self-stretch d-md-flex">
+                        <a href="chitietbaiblog.html" class="hero-wrap hero-bread block-20" style="background-image: url('/images/image_2.jpg');">
+                        </a>
+		              <div class="text d-block pl-md-4 ">
+                        <div class="meta mb-3 d-flex">
+                            <div><a href="#">July 20, 2019</a></div>
+		                  <div><a href="#">Admin</a></div>
+		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
 
+		                </div>
+        		        <h3 class="heading "><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
 
+		                <p class="heading-content">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+		                <p class="btn-parent"><a href="chitietbaiblog.html" class="btn btn-primary py-2 px-3">Read more</a></p>
+		              </div>
+		            </div>
+		          </div>
+		          <div class="col-md-12 d-flex ftco-animate block-content">
+		            <div class="blog-entry align-self-stretch d-md-flex ">
+                        <a href="chitietbaiblog.html" class="hero-wrap hero-bread block-20" style="background-image: url('/images/image_3.jpg');">
+                        </a>
+		              <div class="text d-block pl-md-4">
+		              	<div class="meta mb-3 d-flex">
+
+		                  <div><a href="#">July 20, 2019</a></div>
+		                  <div><a href="#">Admin</a></div>
+		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
+
+		                </div>
+        		        <h3 class="heading "><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+
+		                <p class="heading-content">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+		               	<p class="btn-parent"><a href="chitietbaiblog.html" class="btn btn-primary py-2 px-3">Read more</a></p>
+		              </div>
+		            </div>
+		          </div>
+		          <div class="col-md-12 d-flex ftco-animate block-content">
+		            <div class="blog-entry align-self-stretch d-md-flex ">
+                        <a href="chitietbaiblog.html" class="hero-wrap hero-bread block-20" style="background-image: url('/images/image_4.jpg');">
+                        </a>
+		              <div class="text d-block pl-md-4">
+		              	<div class="meta mb-3 d-flex">
+
+		                  <div><a href="#">July 20, 2019</a></div>
+		                  <div><a href="#">Admin</a></div>
+		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
+
+		                </div>
+        		        <h3 class="heading "><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+
+		                <p class="heading-content">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+		               	<p class="btn-parent"><a href="chitietbaiblog.html" class="btn btn-primary py-2 px-3">Read more</a></p>
+		              </div>
+		            </div>
+		          </div>
+		          <div class="col-md-12 d-flex ftco-animate block-content">
+		            <div class="blog-entry align-self-stretch d-md-flex">
+                        <a href="chitietbaiblog.html" class="hero-wrap hero-bread block-20" style="background-image: url('/images/image_5.jpg');">
+                        </a>
+		              <div class="text d-block pl-md-4">
+		              	<div class="meta mb-3 d-flex">
+
+		                  <div><a href="#">July 20, 2019</a></div>
+		                  <div><a href="#">Admin</a></div>
+		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
+
+		                </div>
+        		        <h3 class="heading "><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+
+		                <p class="heading-content">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+		               	<p class="btn-parent"><a href="chitietbaiblog.html" class="btn btn-primary py-2 px-3">Read more</a></p>
+		              </div>
+		            </div>
+		          </div>
+                  <div class="col-md-12 d-flex ftco-animate block-content">
+		            <div class="blog-entry align-self-stretch d-md-flex">
+                        <a href="chitietbaiblog.html" class="hero-wrap hero-bread block-20" style="background-image: url('/images/image_6.jpg');">
+                        </a>
+		              <div class="text d-block pl-md-4">
+		              	<div class="meta mb-3 d-flex">
+
+		                  <div><a href="#">July 20, 2019</a></div>
+		                  <div><a href="#">Admin</a></div>
+		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
+
+		                </div>
+        		        <h3 class="heading "><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+
+		                <p class="heading-content">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+		               	<p class="btn-parent"><a href="chitietbaiblog.html" class="btn btn-primary py-2 px-3">Read more</a></p>
+		              </div>
+		            </div>
+		          </div>
+						</div>
           </div> <!-- .col-md-8 -->
-          <div class="col-lg-4 sidebar ftco-animate">
+       <div class="col-lg-4 sidebar ftco-animate">
             <div class="sidebar-box">
               <nav class="navbar">
                 <form class="form-inline">
@@ -172,9 +257,7 @@
 
         </div>
       </div>
-    </section> 
-    <!-- .section -->
-
+    </section> <!-- .section -->
     <footer class="text-center text-lg-start bg-light text-muted">
         <!-- Section: Social media -->
         <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
@@ -292,10 +375,6 @@
         <!-- Copyright -->
       </footer>
       <!-- Footer -->
-  
-
-  <!-- loader -->
-<script src="./script.js"></script>
-
+      <script src="./script.js"></script>
   </body>
 </html>
