--- a/View/adoanhnghiep/trangchu.html
+++ b/View/adoanhnghiep/trangchu.html
@@ -16,9 +16,9 @@
 </head>
 <body class="hold-transition sidebar-mini">
 <div class="wrapper">
-  <button type="button" class="btn btn-danger btn-floating btn-lg backtop blocked-btn" id="btn-back-to-top">
+  <button type="button" class="btn btn-success btn-floating btn-lg backtop blocked-btn" id="btn-back-to-top">
     <i class="fas fa-arrow-up"></i>
-  </button>
+  </button>	
           <!-- Navbar -->
             <div class="container-fluid px-md-5">
               <div class="row justify-content-between">
