upload linh tinh

--- a/View/adoanhnghiep/chitietsanpham.html
+++ b/View/adoanhnghiep/chitietsanpham.html
@@ -20,7 +20,38 @@
 </head>
 
 <body>
+  <div class="wrapper">
+    <button type="button" class="btn btn-success btn-floating btn-lg backtop blocked-btn" id="btn-back-to-top">
+        <i class="fas fa-arrow-up"></i>
+      </button>	
 
+      <div class="container-navbar">
+        <nav class=" navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+          <div class="container-fluid container-nav">
+          
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="fa fa-bars"></span> Menu
+            </button>
+            <div class="collapse navbar-collapse" id="ftco-nav">
+              <ul class="navbar-nav m-auto">
+                <li class="nav-item active"><a href="#" class="nav-link">Trang chủ</a></li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Nông sản</a>
+                  <div class="dropdown-menu" aria-labelledby="dropdown04">
+                    <a class="dropdown-item" href="#">Trái cây</a>
+                    <a class="dropdown-item" href="#">Rau củ</a>
+                    <a class="dropdown-item" href="#">Khác</a>
+                  </div>
+                </li>
+                <li class="nav-item"><a href="#" class="nav-link">Giới thiệu</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Tin tức</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Liên hệ</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+</div>
   <div class="super_container">
     <header class="header" style="display: none;">
       <div class="header_main">
@@ -241,5 +272,5 @@
     </div>
   </div>
 </body>
-
+<script src="./script.js"></script>
 </html>
