--- a/View/adoanhnghiep/blog.html
+++ b/View/adoanhnghiep/blog.html
@@ -72,7 +72,7 @@
 		              <a href="chitietbaiblog.html" class="hero-wrap hero-bread block-20" style="background-image: url('/images/image_1.jpg');">
 		              </a>
 		              <div class="text d-block pl-md-4">
-		              	<div class="meta mb-3 d-flex">
+		              	<div class="meta mb-3 d-flex container-description">
 		                  <div><a href="#">July 20, 2019</a></div>
 		                  <div><a href="#">Admin</a></div>
 		                  <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
@@ -83,34 +83,32 @@
 		              </div>
 		            </div>
 		          </div>
-		          <div class="col-md-12 d-flex ftco-animate block-content">
-		            <div class="blog-entry align-self-stretch d-md-flex">
-                        <a href="chitietbaiblog.html" class="hero-wrap hero-bread block-20" style="background-image: url('/images/image_2.jpg');">
-                        </a>
-		              <div class="text d-block pl-md-4 ">
-                        <div class="meta mb-3 d-flex">
-                            <div><a href="#">July 20, 2019</a></div>
-		                  <div><a href="#">Admin</a></div>
-		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-
-		                </div>
-        		        <h3 class="heading "><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-
-		                <p class="heading-content">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-		                <p class="btn-parent"><a href="chitietbaiblog.html" class="btn btn-primary py-2 px-3">Read more</a></p>
-		              </div>
-		            </div>
-		          </div>
+              <div class="col-md-12 d-flex ftco-animate block-content">
+                <div class="blog-entry align-self-stretch d-md-flex">
+              <a href="chitietbaiblog.html" class="hero-wrap hero-bread block-20" style="background-image: url('/images/image_2.jpg');">
+              </a>
+              <div class="text d-block pl-md-4">
+                <div class="meta mb-3 d-flex container-description">
+                  <div><a href="#">July 20, 2019</a></div>
+                  <div><a href="#">Admin</a></div>
+                  <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
+                </div>
+                <h3 class="heading "><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+                <p class="heading-content">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+                <p class="btn-parent"><a href="chitietbaiblog.html" class="btn btn-primary py-2 px-3">Read more</a></p>
+              </div>
+            </div>
+          </div>
 		          <div class="col-md-12 d-flex ftco-animate block-content">
 		            <div class="blog-entry align-self-stretch d-md-flex ">
                         <a href="chitietbaiblog.html" class="hero-wrap hero-bread block-20" style="background-image: url('/images/image_3.jpg');">
                         </a>
 		              <div class="text d-block pl-md-4">
-		              	<div class="meta mb-3 d-flex">
+		              	<div class="meta mb-3 d-flex container-description">
 
 		                  <div><a href="#">July 20, 2019</a></div>
 		                  <div><a href="#">Admin</a></div>
-		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
+		                  <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
 
 		                </div>
         		        <h3 class="heading "><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
@@ -125,11 +123,11 @@
                         <a href="chitietbaiblog.html" class="hero-wrap hero-bread block-20" style="background-image: url('/images/image_4.jpg');">
                         </a>
 		              <div class="text d-block pl-md-4">
-		              	<div class="meta mb-3 d-flex">
+		              	<div class="meta mb-3 d-flex container-description">
 
 		                  <div><a href="#">July 20, 2019</a></div>
 		                  <div><a href="#">Admin</a></div>
-		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
+		                  <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
 
 		                </div>
         		        <h3 class="heading "><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
@@ -144,11 +142,11 @@
                         <a href="chitietbaiblog.html" class="hero-wrap hero-bread block-20" style="background-image: url('/images/image_5.jpg');">
                         </a>
 		              <div class="text d-block pl-md-4">
-		              	<div class="meta mb-3 d-flex">
+		              	<div class="meta mb-3 d-flex container-description">
 
 		                  <div><a href="#">July 20, 2019</a></div>
 		                  <div><a href="#">Admin</a></div>
-		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
+		                  <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
 
 		                </div>
         		        <h3 class="heading "><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
@@ -163,11 +161,11 @@
                         <a href="chitietbaiblog.html" class="hero-wrap hero-bread block-20" style="background-image: url('/images/image_6.jpg');">
                         </a>
 		              <div class="text d-block pl-md-4">
-		              	<div class="meta mb-3 d-flex">
+		              	<div class="meta mb-3 d-flex container-description">
 
 		                  <div><a href="#">July 20, 2019</a></div>
 		                  <div><a href="#">Admin</a></div>
-		                  <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
+		                  <div><a href="#" class="meta-chat"><span class="fa fa-comment"></span> 3</a></div>
 
 		                </div>
         		        <h3 class="heading "><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
