--- a/View/adoanhnghiep/trangchu.html
+++ b/View/adoanhnghiep/trangchu.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/blog.css">
+  <link rel="stylesheet" href="./css/reponsive.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
