rut gon src code

--- a/View/adoanhnghiep/about.html
+++ b/View/adoanhnghiep/about.html
@@ -13,11 +13,11 @@
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <link rel="stylesheet" href="./css/blog.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/reponsive.css">
-  <link rel="stylesheet" href="./css/magnific-popup.css">
-  <link rel="stylesheet" href="./css/flaticon.css">
+  <link rel="stylesheet" href="/css/blog.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/reponsive.css">
+  <link rel="stylesheet" href="/css/magnific-popup.css">
+  <link rel="stylesheet" href="/css/flaticon.css">
   <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -361,12 +361,12 @@
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
       Thiết Kế Web & Ý Tưởng Bởi Founder:<a class="text-reset fw-bold" href="">
-        https://vnaz.vn</a>
+        nongsanviet.vn</a>
     </div>
     <!-- Copyright -->
   </footer>
 
-  <script src="/View/adoanhnghiep/script.js"></script>
+  <script src="/script/script.js"></script>
 
   <!-- jQuery -->
 <script src="../../plugins/jquery/jquery.min.js"></script>
