--- a/View/adoanhnghiep/chitietbaiblog.html
+++ b/View/adoanhnghiep/chitietbaiblog.html
@@ -5,16 +5,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/blog.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
-    <!-- Theme style -->
-    <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap"
+    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <link rel="stylesheet" href="/css/blog.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/reponsive.css">
+  <link rel="stylesheet" href="/css/magnific-popup.css">
+  <link rel="stylesheet" href="/css/flaticon.css">
+  <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
+  <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
   </head>
   <body class="goto-here">
     <div class="wrapper">
@@ -176,126 +180,135 @@
     <!-- .section -->
 
     <footer class="text-center text-lg-start bg-light text-muted">
-        <!-- Section: Social media -->
-        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-          <!-- Left -->
-          <div class="me-5 d-none d-lg-block">
-            <span>Kết nối với chúng tôi trên các mạng xã hội:</span>
-          </div>
-          <!-- Left -->
-      
-          <!-- Right -->
-          <div>
-            <a href="" class="me-4 text-reset" style="margin:0 8px">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-            <a href="" class="me-4 text-reset" style="margin:0 8px">
-    
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="" class="me-4 text-reset" style="margin:0 8px">
-                <i class="fab fa-google"></i>
-            </a>
-            <a href="" class="me-4   text-reset" style="margin:0 8px">
-                <i class="fab fa-instagram"></i>
-            </a>
-            <a href="" class="me-4 text-reset" style="margin:0 8px">
-                <i class="fab fa-linkedin"></i>
-            </a>
-            <a href="" class="me-4 text-reset" style="margin:0 8px">
-                <i class="fab fa-github"></i>
-            </a>
-          </div>
-          <!-- Right -->
-        </section>
-        <!-- Section: Social media -->
-      
-        <!-- Section: Links  -->
-        <section class="" style="background-color:#82ae46;color: #fff">
-          <div class="container text-center text-md-start mt-5">
-            <!-- Grid row -->
-            <div class="row mt-3" >
-              <!-- Grid column -->
-              <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" style="padding-top:30px">
-                <!-- Content -->
-                <h6 class="text-uppercase fw-bold mb-4">
-                    Weba.vn
-                </h6>
-                <p>
-                    Chúng Tôi Tin Chất Lượng Là Dịch Vụ Tốt Nhất.
-                </p>
-              </div>
-              <!-- Grid column -->
-      
-              <!-- Grid column -->
-              <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" style="padding-top:30px">
-                <!-- Links -->
-                <h6 class="text-uppercase fw-bold mb-4">
-                  GIỚI THIỆU
-                </h6>
-                <p>
-                  <a href="#!" class="text-reset">Hỗ trợ khách hàng</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Điều khoản & dịch vụ</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Hướng dẫn thanh toán</a>
-                </p>
-              </div>
-              <!-- Grid column -->
-      
-              <!-- Grid column -->
-              <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" style="padding-top:30px">
-                <!-- Links -->
-                <h6 class="text-uppercase fw-bold mb-4">
-                 HỖ TRỢ KHÁCH HÀNG
-                </h6>
-                <p>
-                  <a href="#!" class="text-reset">Trang chủ</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Giỏ hàng</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Thanh toán</a>
-                </p>
-                <p>
-                  <a href="#!" class="text-reset">Liên hệ</a>
-                </p>
-              </div>
-              <!-- Grid column -->
-      
-              <!-- Grid column -->
-              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" style="padding-top:30px">
-                <!-- Links -->
-                <h6 class="text-uppercase fw-bold mb-4">THÔNG TIN CÔNG TY</h6>
-                <p>Công Ty TNHH Phân Phối Nông Sản Việt</p>
-                <p>
-                    <i class="fa fa-map-marker"></i>
-                  Số 12 Nguyễn Văn Bảo, Phường 4, Gò Vấp, Hồ Chí Minh 
-                </p>
-                <p><i class="fas fa-phone me-3"></i> 02866860863 </p>
-                <p><i class="fa fa-envelope"></i>dhcn@gmail.com</p>
-              </div>
-              <!-- Grid column -->
-            </div>
-            <!-- Grid row -->
-          </div>
-        </section>
-        <!-- Section: Links  -->
-      
-        <!-- Copyright -->
-        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-            Thiết Kế Web & Marketing Bởi Partner Google:<a class="text-reset fw-bold" href="https://mdbootstrap.com/"> https://vnaz.vn</a>
+      <!-- Section: Social media -->
+      <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+        <!-- Left -->
+        <div class="me-5 d-none d-lg-block">
+          <span>Kết nối với chúng tôi trên các mạng xã hội:</span>
         </div>
-        <!-- Copyright -->
-      </footer>
+        <!-- Left -->
+  
+        <!-- Right -->
+        <div>
+          <a href="" class="me-4 text-reset" style="margin:0 8px">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="" class="me-4 text-reset" style="margin:0 8px">
+  
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="" class="me-4 text-reset" style="margin:0 8px">
+            <i class="fab fa-google"></i>
+          </a>
+          <a href="" class="me-4   text-reset" style="margin:0 8px">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="" class="me-4 text-reset" style="margin:0 8px">
+            <i class="fab fa-linkedin"></i>
+          </a>
+          <a href="" class="me-4 text-reset" style="margin:0 8px">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
+        <!-- Right -->
+      </section>
+      <!-- Section: Social media -->
+  
+      <!-- Section: Links  -->
+      <section class="" style="background-color:#82ae46;color: #fff">
+        <div class="container text-center text-md-start mt-5">
+          <!-- Grid row -->
+          <div class="row mt-3">
+            <!-- Grid column -->
+            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" style="padding-top:30px">
+              <!-- Content -->
+              <h6 class="text-uppercase fw-bold mb-4">
+                Nongsanviet.vn
+              </h6>
+              <p>
+                Chúng Tôi Tin Chất Lượng Là Dịch Vụ Tốt Nhất.
+              </p>
+            </div>
+            <!-- Grid column -->
+  
+            <!-- Grid column -->
+            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" style="padding-top:30px">
+              <!-- Links -->
+              <h6 class="text-uppercase fw-bold mb-4">
+                GIỚI THIỆU
+              </h6>
+              <p>
+                <a href="#!" class="text-reset">Hỗ trợ khách hàng</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Điều khoản & dịch vụ</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Hướng dẫn thanh toán</a>
+              </p>
+            </div>
+            <!-- Grid column -->
+  
+            <!-- Grid column -->
+            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" style="padding-top:30px">
+              <!-- Links -->
+              <h6 class="text-uppercase fw-bold mb-4">
+                HỖ TRỢ KHÁCH HÀNG
+              </h6>
+              <p>
+                <a href="#!" class="text-reset">Trang chủ</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Giỏ hàng</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Thanh toán</a>
+              </p>
+              <p>
+                <a href="#!" class="text-reset">Liên hệ</a>
+              </p>
+            </div>
+            <!-- Grid column -->
+  
+            <!-- Grid column -->
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" style="padding-top:30px">
+              <!-- Links -->
+              <h6 class="text-uppercase fw-bold mb-4">THÔNG TIN CÔNG TY</h6>
+              <p>Công Ty TNHH Phân Phối Nông Sản Việt</p>
+              <p>
+                <i class="fa fa-map-marker"></i>
+                Số 12 Nguyễn Văn Bảo, Phường 4, Gò Vấp, Hồ Chí Minh
+              </p>
+              <p><i class="fas fa-phone me-3"></i>0865695401 </p>
+              <p><i class="fa fa-envelope"></i>nongsanvietcontact@gmail.com</p>
+            </div>
+            <!-- Grid column -->
+          </div>
+          <!-- Grid row -->
+        </div>
+      </section>
+      <!-- Section: Links  -->
+  
+      <!-- Copyright -->
+      <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+        Thiết Kế Web & Ý Tưởng Bởi Founder:<a class="text-reset fw-bold" href="">
+          nongsanviet.vn</a>
+      </div>
+      <!-- Copyright -->
+    </footer>
       <!-- Footer -->
   
 
-  <!-- loader -->
-<script src="./script.js"></script>
+<script src="/script/script.js"></script>
 
+  <!-- jQuery -->
+<script src="../../plugins/jquery/jquery.min.js"></script>
+<!-- Bootstrap 4 -->
+<script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- AdminLTE App -->
+<script src="../../dist/js/adminlte.min.js"></script>
+<!-- AdminLTE for demo purposes -->
+<script src="../../dist/js/demo.js"></script>
+<script src="View/adoanhnghiep/script.js"></script>
   </body>
 </html>
