--- a/View/adoanhnghiep/chitietsanpham.html
+++ b/View/adoanhnghiep/chitietsanpham.html
@@ -10,8 +10,8 @@
   <!-- Google Font: Source Sans Pro -->
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./css/reponsive.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/reponsive.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
   <!-- Theme style -->
@@ -83,7 +83,7 @@
       <div class="container-fluid" style=" background-color: #fff; padding: 11px;">
         <div class="row">
           <div class="col-lg-4 order-lg-2 order-1">
-            <div class="image_selected"><img src="tao.jpg" height="580px" width="580px" alt=""></div>
+            <div class="image_selected"><img src="/images/táo.jpg" height="580px" width="580px" alt=""></div>
           </div>
           <div class="col-lg-6 order-3">
             <div class="product_description">
@@ -95,8 +95,8 @@
                 </ol>
               </nav>
               <div class="product_name">Táo đỏ mỹ</div>
-              <div class="product-rating"><span class="badge badge-success"><i class="fa fa-star"></i> 4.5 Star</span>
-                <span class="rating-review">35 Ratings & 45 Reviews</span></div>
+              <div class="product-rating"><span class="badge badge-success"><i class="fa fa-star"></i> 4.5 Sao</span>
+                <span class="rating-review">35 Xếp hạng & 45 Đánh giá</span></div>
               <div> <span class="product_price">150,000đ</span> <strike class="product_discount"> <span
                     style='color:black'>200,000đ<span> </strike> </div>
               <div> <span class="product_saved">You Saved:</span> <span style='color:black'>50,000đ<span> </div>
@@ -112,7 +112,7 @@
                         <div class="col-md-3 col-xs-3"> <img src="https://img.icons8.com/color/48/000000/price-tag.png">
                         </div>
                         <div class="col-md-9 col-xs-9">
-                          <div class="pr-info"> <span class="break-all">Voucher 5%</span> </div>
+                          <div class="pr-info"> <span class="break-all">Giảm giá 5%</span> </div>
                         </div>
                       </div>
                     </div>
@@ -151,126 +151,136 @@
         </div>
 
        <!-- Footer -->
-  <footer class="text-center text-lg-start bg-light text-muted">
-    <!-- Section: Social media -->
-    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-      <!-- Left -->
-      <div class="me-5 d-none d-lg-block">
-        <span>Kết nối với chúng tôi trên các mạng xã hội:</span>
-      </div>
-      <!-- Left -->
-  
-      <!-- Right -->
-      <div>
-        <a href="" class="me-4 text-reset" style="margin:0 8px">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="" class="me-4 text-reset" style="margin:0 8px">
-
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="" class="me-4 text-reset" style="margin:0 8px">
-            <i class="fab fa-google"></i>
-        </a>
-        <a href="" class="me-4   text-reset" style="margin:0 8px">
-            <i class="fab fa-instagram"></i>
-        </a>
-        <a href="" class="me-4 text-reset" style="margin:0 8px">
-            <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="" class="me-4 text-reset" style="margin:0 8px">
-            <i class="fab fa-github"></i>
-        </a>
-      </div>
-      <!-- Right -->
-    </section>
-    <!-- Section: Social media -->
-  
-    <!-- Section: Links  -->
-    <section class="" style="background-color:#3e6500;color: #fff">
-      <div class="container text-center text-md-start mt-5">
-        <!-- Grid row -->
-        <div class="row mt-3" >
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" style="padding-top:30px">
-            <!-- Content -->
-            <h6 class="text-uppercase fw-bold mb-4">
-                Weba.vn
-            </h6>
-            <p>
-                Chúng Tôi Tin Chất Lượng Là Dịch Vụ Tốt Nhất.
-            </p>
+       <footer class="text-center text-lg-start bg-light text-muted">
+        <!-- Section: Social media -->
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+          <!-- Left -->
+          <div class="me-5 d-none d-lg-block">
+            <span>Kết nối với chúng tôi trên các mạng xã hội:</span>
           </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" style="padding-top:30px">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              GIỚI THIỆU
-            </h6>
-            <p>
-              <a href="#!" class="text-reset">Hỗ trợ khách hàng</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Điều khoản & dịch vụ</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Hướng dẫn thanh toán</a>
-            </p>
+          <!-- Left -->
+    
+          <!-- Right -->
+          <div>
+            <a href="" class="me-4 text-reset" style="margin:0 8px">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="" class="me-4 text-reset" style="margin:0 8px">
+    
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="" class="me-4 text-reset" style="margin:0 8px">
+              <i class="fab fa-google"></i>
+            </a>
+            <a href="" class="me-4   text-reset" style="margin:0 8px">
+              <i class="fab fa-instagram"></i>
+            </a>
+            <a href="" class="me-4 text-reset" style="margin:0 8px">
+              <i class="fab fa-linkedin"></i>
+            </a>
+            <a href="" class="me-4 text-reset" style="margin:0 8px">
+              <i class="fab fa-github"></i>
+            </a>
           </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" style="padding-top:30px">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-             HỖ TRỢ KHÁCH HÀNG
-            </h6>
-            <p>
-              <a href="#!" class="text-reset">Trang chủ</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Giỏ hàng</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Thanh toán</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Liên hệ</a>
-            </p>
+          <!-- Right -->
+        </section>
+        <!-- Section: Social media -->
+    
+        <!-- Section: Links  -->
+        <section class="" style="background-color:#82ae46;color: #fff">
+          <div class="container text-center text-md-start mt-5">
+            <!-- Grid row -->
+            <div class="row mt-3">
+              <!-- Grid column -->
+              <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" style="padding-top:30px">
+                <!-- Content -->
+                <h6 class="text-uppercase fw-bold mb-4">
+                  Nongsanviet.vn
+                </h6>
+                <p>
+                  Chúng Tôi Tin Chất Lượng Là Dịch Vụ Tốt Nhất.
+                </p>
+              </div>
+              <!-- Grid column -->
+    
+              <!-- Grid column -->
+              <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" style="padding-top:30px">
+                <!-- Links -->
+                <h6 class="text-uppercase fw-bold mb-4">
+                  GIỚI THIỆU
+                </h6>
+                <p>
+                  <a href="#!" class="text-reset">Hỗ trợ khách hàng</a>
+                </p>
+                <p>
+                  <a href="#!" class="text-reset">Điều khoản & dịch vụ</a>
+                </p>
+                <p>
+                  <a href="#!" class="text-reset">Hướng dẫn thanh toán</a>
+                </p>
+              </div>
+              <!-- Grid column -->
+    
+              <!-- Grid column -->
+              <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4" style="padding-top:30px">
+                <!-- Links -->
+                <h6 class="text-uppercase fw-bold mb-4">
+                  HỖ TRỢ KHÁCH HÀNG
+                </h6>
+                <p>
+                  <a href="#!" class="text-reset">Trang chủ</a>
+                </p>
+                <p>
+                  <a href="#!" class="text-reset">Giỏ hàng</a>
+                </p>
+                <p>
+                  <a href="#!" class="text-reset">Thanh toán</a>
+                </p>
+                <p>
+                  <a href="#!" class="text-reset">Liên hệ</a>
+                </p>
+              </div>
+              <!-- Grid column -->
+    
+              <!-- Grid column -->
+              <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" style="padding-top:30px">
+                <!-- Links -->
+                <h6 class="text-uppercase fw-bold mb-4">THÔNG TIN CÔNG TY</h6>
+                <p>Công Ty TNHH Phân Phối Nông Sản Việt</p>
+                <p>
+                  <i class="fa fa-map-marker"></i>
+                  Số 12 Nguyễn Văn Bảo, Phường 4, Gò Vấp, Hồ Chí Minh
+                </p>
+                <p><i class="fas fa-phone me-3"></i>0865695401 </p>
+                <p><i class="fa fa-envelope"></i>nongsanvietcontact@gmail.com</p>
+              </div>
+              <!-- Grid column -->
+            </div>
+            <!-- Grid row -->
           </div>
-          <!-- Grid column -->
-  
-          <!-- Grid column -->
-          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4" style="padding-top:30px">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">THÔNG TIN CÔNG TY</h6>
-            <p>Công Ty TNHH Phân Phối Nông Sản Việt</p>
-            <p>
-                <i class="fa fa-map-marker"></i>
-              Số 12 Nguyễn Văn Bảo, Phường 4, Gò Vấp, Hồ Chí Minh 
-            </p>
-            <p><i class="fas fa-phone me-3"></i> 02866860863 </p>
-            <p><i class="fa fa-envelope"></i>dhcn@gmail.com</p>
-          </div>
-          <!-- Grid column -->
+        </section>
+        <!-- Section: Links  -->
+    
+        <!-- Copyright -->
+        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+          Thiết Kế Web & Ý Tưởng Bởi Founder:<a class="text-reset fw-bold" href="">
+            nongsanviet.vn</a>
         </div>
-        <!-- Grid row -->
-      </div>
-    </section>
-    <!-- Section: Links  -->
-  
-    <!-- Copyright -->
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-        Thiết Kế Web & Marketing Bởi Partner Google:<a class="text-reset fw-bold" href="https://mdbootstrap.com/"> https://vnaz.vn</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
+        <!-- Copyright -->
+      </footer>
   <!-- Footer -->
       </div>
     </div>
   </div>
 </body>
-<script src="./script.js"></script>
-</html>
+<script src="/script/script.js"></script>
+
+  <!-- jQuery -->
+<script src="../../plugins/jquery/jquery.min.js"></script>
+<!-- Bootstrap 4 -->
+<script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+<!-- AdminLTE App -->
+<script src="../../dist/js/adminlte.min.js"></script>
+<!-- AdminLTE for demo purposes -->
+<script src="../../dist/js/demo.js"></script>
+<script src="View/adoanhnghiep/script.js"></script></html>
