--- a/View/adoanhnghiep/chitietbaiblog.html
+++ b/View/adoanhnghiep/chitietbaiblog.html
@@ -58,7 +58,7 @@
         <div class="row no-gutters slider-text align-items-center justify-content-center">
           <div class="col-md-9 ftco-animate text-center">
           	<p class="breadcrumbs"><span class="mr-2"><a href="trangchu.html" style="color: #fff;font-size:18px">Home</a></span> <span style="color: #fff;font-size:18px">Blog</span></p>
-            <h1 class="mb-0 bread" >Blog</h1>
+            <h1 class="mb-0 bread" >Doc Mơ Farm</h1>
           </div>
         </div>
       </div>
@@ -68,21 +68,35 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 ftco-animate">
-						<h2 class="mb-3">Organic foods is good for your health</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, eius mollitia suscipit, quisquam doloremque distinctio perferendis et doloribus unde architecto optio laboriosam porro adipisci sapiente officiis nemo accusamus ad praesentium? Esse minima nisi et. Dolore perferendis, enim praesentium omnis, iste doloremque quia officia optio deserunt molestiae voluptates soluta architecto tempora.</p>
+						<h2 class="mb-3">Nông trại số 1 Đồng Nai</h2>
             <p>
-              <img class="img-content" src="/images/image_1.jpg" alt="pic1" class="img-fluid">
+              Từ một cơ sở sản xuất nhỏ khởi nghiệp từ năm 1982 và trở thành HTX mang tên Bình Tiên chuyên sản xuất dép Cao su tại Quận 6 với vài chục công nhân và hơn hết là một tấm lòng vì sự phát triển kinh tế đất nước của những người chủ tâm huyết, Biti’s đã trải qua giai đoạn của nền kinh tế bao cấp với nhiều khó khăn.
+Thế nhưng, hơn 33 năm trôi qua, như một “bước chân không mỏi”, Công ty TNHH Sản Xuất Hàng Tiêu Dùng Bình Tiên (Biti’s) đã từng bước xây dưng cho mình một chiến lược sản xuất và xuất khẩu mang tầm thời đại, tạo ra một thương hiệu Giày dép Biti’s gắn liền với nhu cầu, thị hiếu người tiêu dùng. Hiện nay, công ty Biti’s trở thành một đơn vị mạnh, thể hiện sự bứt phá trong lãnh vực SXKD giày dép; có đủ nhân lực, vật lực, tài lực để phát triển ngành nghề và đem đến những thành quả cao hơn.
             </p>
-            <p>Molestiae cupiditate inventore animi, maxime sapiente optio, illo est nemo veritatis repellat sunt doloribus nesciunt! Minima laborum magni reiciendis qui voluptate quisquam voluptatem soluta illo eum ullam incidunt rem assumenda eveniet eaque sequi deleniti tenetur dolore amet fugit perspiciatis ipsa, odit. Nesciunt dolor minima esse vero ut ea, repudiandae suscipit!</p>
-            <h2 class="mb-3 mt-5">#2. Creative WordPress Themes</h2>
-            <p>Temporibus ad error suscipit exercitationem hic molestiae totam obcaecati rerum, eius aut, in. Exercitationem atque quidem tempora maiores ex architecto voluptatum aut officia doloremque. Error dolore voluptas, omnis molestias odio dignissimos culpa ex earum nisi consequatur quos odit quasi repellat qui officiis reiciendis incidunt hic non? Debitis commodi aut, adipisci.</p>
             <p>
-              <img class="img-content" src="/images/image_2.jpg" alt="pic2" class="img-fluid">
+              <img class="img-content" src="../../img/image_1.jpg" alt="pic1" class="img-fluid">
             </p>
-            <p>Quisquam esse aliquam fuga distinctio, quidem delectus veritatis reiciendis. Nihil explicabo quod, est eos ipsum. Unde aut non tenetur tempore, nisi culpa voluptate maiores officiis quis vel ab consectetur suscipit veritatis nulla quos quia aspernatur perferendis, libero sint. Error, velit, porro. Deserunt minus, quibusdam iste enim veniam, modi rem maiores.</p>
-            <p>Odit voluptatibus, eveniet vel nihil cum ullam dolores laborum, quo velit commodi rerum eum quidem pariatur! Quia fuga iste tenetur, ipsa vel nisi in dolorum consequatur, veritatis porro explicabo soluta commodi libero voluptatem similique id quidem? Blanditiis voluptates aperiam non magni. Reprehenderit nobis odit inventore, quia laboriosam harum excepturi ea.</p>
-            <p>Adipisci vero culpa, eius nobis soluta. Dolore, maxime ullam ipsam quidem, dolor distinctio similique asperiores voluptas enim, exercitationem ratione aut adipisci modi quod quibusdam iusto, voluptates beatae iure nemo itaque laborum. Consequuntur et pariatur totam fuga eligendi vero dolorum provident. Voluptatibus, veritatis. Beatae numquam nam ab voluptatibus culpa, tenetur recusandae!</p>
-            <p>Voluptas dolores dignissimos dolorum temporibus, autem aliquam ducimus at officia adipisci quasi nemo a perspiciatis provident magni laboriosam repudiandae iure iusto commodi debitis est blanditiis alias laborum sint dolore. Dolores, iure, reprehenderit. Error provident, pariatur cupiditate soluta doloremque aut ratione. Harum voluptates mollitia illo minus praesentium, rerum ipsa debitis, inventore?</p>
+            <h2 class="mb-3 mt-5">#2. Quy trình sản xuất</h2>
+            <p>
+              Bước 1: Chuẩn bị mặt bằng. Dọn cỏ, dọn vệ sinh, chuẩn bị công cụ chuẩn bị trồng cây.
+
+Bước 2: Xác định vị trí trồng cây, đào hố trồng cây đúng kích cỡ
+
+Từ bản vẽ xác định các vị trí trồng cây, dùng cọc để đánh dấu từng vị trí cây được trồng. Dùng thước dây đo khoảng cách giữa 2 cây đảm bảo khoảng cách giữa 2 cây đúng kích thước trên bản vẽ.
+
+Tiến hàng đào hố trồng cây. Tùy cỡ bầu đất mà đào hố có kích thước phù hợp nên đào hố rộng hơn bầu đất 20-30cm đảm bảo đưa cây xuống dễ dàng.
+            </p>
+            <p>
+              <img class="img-content" src="../../img/suploxanh.jpg" alt="pic2" class="img-fluid">
+            </p>
+            <h2>Giá trị dinh dưỡng</h2>
+            <p>Về carb: Phần lớn lượng carbs có trong súp lơ - bông cải xanh đều là chất xơ. Vì thế, nó rất tốt cho tim mạch. Ngoài ra, loại rau này còn có chỉ số đường huyết (GI) thấp, giúp giữ được nguồn năng lượng ổn định, thích hợp bổ sung vào thực đơn của bệnh nhân tiểu đường.
+
+              Về chất béo: Súp lơ - bông cải xanh không chứa cholesterol và chứa rất ít chất béo. Hơn nữa, thực phẩm này còn cung cấp 1 lượng nhỏ omega 3 ở dạng axit alpha-linolenic (ALA) nên rất tốt cho sức khoẻ của chúng ta.
+              
+              Về chất đạm: 91gr súp lơ - bông cải xanh cung cấp đến 2.5gr chất đạm. Vì thế, nó trở thành nguồn cung cấp protein dồi dào cho cơ thể con người.
+              
+              Về vitamin và khoáng chất: Trong súp lơ - bông cải xanh có chứa nhiều loại vitamin và khoáng chất phong phú như vitamin C, K, A, B9, kali, mangan, photpho giúp tăng cường hệ miễn dịch, phục hồi cơ thể và tốt cho xương.</p>
             <div class="tag-widget post-tag-container mb-5 mt-5">
               <div class="tagcloud">
                 <a href="#" class="tag-cloud-link">Life</a>
@@ -103,72 +117,12 @@
                 </form>
               </nav>
             </div>
-            <div class="sidebar-box ftco-animate">
-            	<h3 class="heading">Categories</h3>
-              <ul class="categories">
-                <li><a class="categories-link" href="#">Vegetables <span>(12)</span></a></li>
-                <li><a class="categories-link" href="#">Fruits <span>(22)</span></a></li>
-                <li><a class="categories-link" href="#">Juice <span>(37)</span></a></li>
-                <li><a class="categories-link" href="#">Dries <span>(42)</span></a></li>
-              </ul>
-            </div>
+            
 
-            <div class="sidebar-box ftco-animate">
-              <h3 class="heading">Recent Blog</h3>
-              <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(/images/image_1.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading-1"><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-                  <div class="meta container-about d-flex">
-                    <div><a href="#"><span class="fa fa-calendar"></span> April 09, 2019</a></div>
-                    <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
-                    <div><a href="#"><span class="fa fa-comment"></span> 19</a></div>
-                  </div>
-                </div>
-              </div>
-              <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(/images/image_2.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading-1"><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-                  <div class="meta container-about d-flex">
-                    <div><a href="#"><span class="fa fa-calendar"></span> April 09, 2019</a></div>
-                    <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
-                    <div><a href="#"><span class="fa fa-comment"></span> 19</a></div>
-                  </div>
-                </div>
-              </div>
-              <div class="block-21 mb-4 d-flex">
-                <a class="blog-img mr-4" style="background-image: url(/images/image_3.jpg);"></a>
-                <div class="text">
-                  <h3 class="heading-1"><a href="#" class="heading-blog-text">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-                  <div class="meta container-about d-flex">
-                    <div><a href="#"><span class="fa fa-calendar"></span> April 09, 2019</a></div>
-                    <div><a href="#"><span class="fa fa-user"></span> Admin</a></div>
-                    <div><a href="#"><span class="fa fa-comment"></span> 19</a></div>
-                  </div>
-                </div>
-              </div>
-            </div>
+    
 
-            <div class="sidebar-box ftco-animate">
-              <h3 class="heading">Tag Cloud</h3>
-              <div class="tagcloud">
-                <a href="#" class="tag-cloud-link">fruits</a>
-                <a href="#" class="tag-cloud-link">tomatoe</a>
-                <a href="#" class="tag-cloud-link">mango</a>
-                <a href="#" class="tag-cloud-link">apple</a>
-                <a href="#" class="tag-cloud-link">carrots</a>
-                <a href="#" class="tag-cloud-link">orange</a>
-                <a href="#" class="tag-cloud-link">pepper</a>
-                <a href="#" class="tag-cloud-link">eggplant</a>
-              </div>
-            </div>
-
-            <div class="sidebar-box ftco-animate">
-              <h3 class="heading">Paragraph</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus itaque, autem necessitatibus voluptate quod mollitia delectus aut, sunt placeat nam vero culpa sapiente consectetur similique, inventore eos fugit cupiditate numquam!</p>
-            </div>
-          </div>
+            
+            
 
         </div>
       </div>
